style: fix button alignment

--- a/components/Button/Button.module.scss
+++ b/components/Button/Button.module.scss
@@ -107,7 +107,6 @@
   @media #{$mq-mobile} {
     clear: both;
     display: block;
-    float: left;
   }
 }
 
